fix: fix using back() with inertia requests

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -189,6 +189,7 @@
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "هل أنت متأكد؟ سيؤدي هذا إلى إزالة القالب من كافة جهات الاتصال، لكنه لن يحذف جهات الاتصال نفسها.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "هل أنت متأكد أنك تريد حذف هذا الفريق؟ بمجرد حذف الفريق ، سيتم حذف جميع مصادره وبياناته نهائيًا.",
   "Are you sure you want to delete your account? Once your account is deleted, all of its resources and data will be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "هل ترغب بحذف حسابك بالتأكيد؟ بمجرد حذف حسابك، سيتم حذف جميع البيانات المتعلقة به نهائياً. الرجاء إدخال كلمة المرور الخاصة بك لتأكيد رغبتك في حذف حسابك بشكل دائم.",
+  "Are you sure you want to disable two factor authentication?": "هل أنت متأكد من أنك تريد تعطيل مصادقة عاملين؟",
   "Are you sure you would like to archive this contact?": "هل أنت متأكد أنك تريد أرشفة جهة الاتصال هذه؟",
   "Are you sure you would like to delete this API token?": "هل أنت متأكد أنك تريد حذف رمز API المميز؟",
   "Are you sure you would like to delete this contact? This will remove everything we know about this contact.": "هل أنت متأكد أنك تريد حذف جهة الاتصال هذه؟ سيؤدي هذا إلى إزالة كل ما نعرفه عن جهة الاتصال هذه.",
@@ -579,8 +580,8 @@
   "Log in": "تسجيل الدخول",
   "Login": "تسجيل الدخول",
   "Login with:": "تسجيل الدخول مع:",
-  "Log Out": "تسجيل الخروج",
   "Logout": "تسجيل الخروج",
+  "Log Out": "تسجيل الخروج",
   "Log Out Other Browser Sessions": "تسجيل الخروج من جلساتك على المتصفحات الأخرى",
   "Longest streak": "أطول أثر",
   "Love": "حب",
@@ -670,6 +671,7 @@
   "of": "من",
   "Offered": "تقدم",
   "Once a team is deleted, all of its resources and data will be permanently deleted. Before deleting this team, please download any data or information regarding this team that you wish to retain.": "بمجرد حذف الفريق، سيتم حذف جميع مصادره وبياناته نهائيًا. قبل حذف هذا الفريق ، يرجى تنزيل أي بيانات أو معلومات بخصوص هذا الفريق ترغب في الاحتفاظ بها.",
+  "Once two factor authentication is disabled, you will no longer be prompted for a secure, random token during authentication.": "بمجرد تعطيل مصادقة عاملين ، لن تتم مطالبتك برمزًا عشوائيًا آمنًا أثناء المصادقة.",
   "Once you cancel,": "بمجرد الإلغاء،",
   "Once you click the Setup button below, you’ll have to open Telegram with the button we’ll provide you with. This will locate the Monica Telegram bot for you.": "بمجرد النقر فوق زر الإعداد أدناه، سيتعين عليك فتح Telegram باستخدام الزر الذي سنوفره لك. سيؤدي هذا إلى تحديد موقع روبوت Monica Telegram لك.",
   "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "بمجرد حذف حسابك، سيتم حذف جميع مصادره وبياناته نهائياً. قبل حذف حسابك، يرجى تنزيل أي بيانات أو معلومات ترغب في الاحتفاظ بها.",
