--- a/lang/bn.json
+++ b/lang/bn.json
@@ -189,6 +189,7 @@
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "তুমি কি নিশ্চিত? এটি সমস্ত পরিচিতি থেকে টেমপ্লেট মুছে ফেলবে, তবে পরিচিতিগুলিকে মুছে ফেলবে না।",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "আপনি কি নিশ্চিতরূপে এই দল মুছে ফেলতে ইচ্ছুক? একটি দল একবার মুছে ফেলা হলে, তার সব রিসোর্স ও তথ্য স্থায়ীভাবে মুছে ফেলা হবে।",
   "Are you sure you want to delete your account? Once your account is deleted, all of its resources and data will be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "আপনি কি নিশ্চিতরূপে আপনার অ্যাকাউন্ট মুছে ফেলতে ইচ্ছুক? আপনার অ্যাকাউন্ট, রিসোর্স ও তথ্য সব স্থায়ীভাবে মুছে ফেলা হবে। আপনি স্থায়ীভাবে আপনার অ্যাকাউন্ট মুছে ফেলতে চান তা নিশ্চিত করার জন্য আপনার পাসওয়ার্ড লিখুন।",
+  "Are you sure you want to disable two factor authentication?": "আপনি কি নিশ্চিত যে আপনি দুটি ফ্যাক্টর প্রমাণীকরণ অক্ষম করতে চান?",
   "Are you sure you would like to archive this contact?": "আপনি কি নিশ্চিত আপনি এই পরিচিতি সংরক্ষণাগার করতে চান?",
   "Are you sure you would like to delete this API token?": "আপনি কি নিশ্চিত যে আপনি এই এপিআই টোকেন মুছতে চান?",
   "Are you sure you would like to delete this contact? This will remove everything we know about this contact.": "আপনি কি নিশ্চিত আপনি এই পরিচিতি মুছে দিতে চান? এটি এই পরিচিতি সম্পর্কে আমরা যা জানি তা সরিয়ে ফেলবে।",
@@ -579,8 +580,8 @@
   "Log in": "লগইন করুন",
   "Login": "লগইন",
   "Login with:": "লগইন করুন:",
-  "Log Out": "লগ-আউট",
   "Logout": "লগ-আউট",
+  "Log Out": "লগ-আউট",
   "Log Out Other Browser Sessions": "অন্য ব্রাউজার সেশনে লগ আউট করুন",
   "Longest streak": "দীর্ঘতম ধারা",
   "Love": "ভালবাসা",
@@ -670,6 +671,7 @@
   "of": "সর্বমোট",
   "Offered": "অফার করা হয়েছে",
   "Once a team is deleted, all of its resources and data will be permanently deleted. Before deleting this team, please download any data or information regarding this team that you wish to retain.": "একবার একটি দল মুছে ফেলা হলে, তার সমস্ত রিসোর্সসমূহ এবং ডেটা স্থায়ীভাবে মুছে যাবে৷ এই দলটি মুছে ফেলার আগে, অনুগ্রহ করে এই টিম সম্পর্কিত যে কোনও ডেটা বা তথ্য ডাউনলোড করুন যা আপনি রেখে দিতে চান।",
+  "Once two factor authentication is disabled, you will no longer be prompted for a secure, random token during authentication.": "একবার দুটি ফ্যাক্টর প্রমাণীকরণ অক্ষম হয়ে গেলে, আপনাকে প্রমাণীকরণের সময় কোনও সুরক্ষিত, এলোমেলো টোকেনের জন্য আর অনুরোধ করা হবে না।",
   "Once you cancel,": "একবার বাতিল করলে,",
   "Once you click the Setup button below, you’ll have to open Telegram with the button we’ll provide you with. This will locate the Monica Telegram bot for you.": "একবার আপনি নীচের সেটআপ বোতামটি ক্লিক করলে, আমরা আপনাকে যে বোতামটি সরবরাহ করব তা দিয়ে আপনাকে টেলিগ্রাম খুলতে হবে। এটি আপনার জন্য Monica টেলিগ্রাম বট সনাক্ত করবে।",
   "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "একবার আপনার অ্যাকাউন্ট মুছে ফেলা হলে, এর সমস্ত রিসোর্সসমূহ এবং ডেটা স্থায়ীভাবে মুছে যাবে। আপনার অ্যাকাউন্ট মুছে ফেলার আগে, আপনি রেখে দিতে চান এমন কোনো ডেটা বা তথ্য ডাউনলোড করে রাখুন।",
