--- a/lang/ca.json
+++ b/lang/ca.json
@@ -189,6 +189,7 @@
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "Estàs segur? Això eliminarà la plantilla de tots els contactes, però no els suprimirà.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "Esteu segur que voleu suprimir aquest equip? Una vegada que un equip és eliminat, a tots els seus recursos i les dades es perdran permanentment esborrada.",
   "Are you sure you want to delete your account? Once your account is deleted, all of its resources and data will be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "Esteu segur que voleu esborrar el vostre compte? Una vegada el vostre compte ha estat esborrat, tots els seus recursos i les dades es perdran permanentment. Si us plau, introduïu la vostra contrasenya per confirmar que voleu suprimir permanentment el vostre compte.",
+  "Are you sure you want to disable two factor authentication?": "Esteu segur que voleu desactivar l’autenticació de dos factors?",
   "Are you sure you would like to archive this contact?": "Esteu segur que voleu arxivar aquest contacte?",
   "Are you sure you would like to delete this API token?": "Esteu segur que voleu eliminar aquesta API token?",
   "Are you sure you would like to delete this contact? This will remove everything we know about this contact.": "Esteu segur que voleu suprimir aquest contacte? Això eliminarà tot el que sabem sobre aquest contacte.",
@@ -579,8 +580,8 @@
   "Log in": "Entrar",
   "Login": "Entrar",
   "Login with:": "Accedir amb:",
-  "Log Out": "Sortir",
   "Logout": "Sortir",
+  "Log Out": "Sortir",
   "Log Out Other Browser Sessions": "Tanca la sessió d’altres navegadors",
   "Longest streak": "Ratxa més llarga",
   "Love": "Amor",
@@ -670,6 +671,7 @@
   "of": "de",
   "Offered": "S’ofereix",
   "Once a team is deleted, all of its resources and data will be permanently deleted. Before deleting this team, please download any data or information regarding this team that you wish to retain.": "Una vegada que un equip és eliminat, a tots els seus recursos i les dades es perdran permanentment esborrada. Abans d’esborrar aquest equip, si us plau, descarregui qualsevol de les dades o la informació relativa a aquest equip que voleu conservar.",
+  "Once two factor authentication is disabled, you will no longer be prompted for a secure, random token during authentication.": "Un cop desactivat l’autenticació de dos factors, ja no se us demanarà un testimoni segur i aleatori durant l’autenticació.",
   "Once you cancel,": "Un cop cancel·lis,",
   "Once you click the Setup button below, you’ll have to open Telegram with the button we’ll provide you with. This will locate the Monica Telegram bot for you.": "Un cop feu clic al botó Configuració de sota, haureu d’obrir Telegram amb el botó que us proporcionarem. Això us localitzarà el bot de Monica Telegram.",
   "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "Una vegada el vostre compte ha estat esborrat, a tots els seus recursos i les dades es perdran permanentment esborrada. Abans de suprimir el compte, si us plau, descarregui qualsevol dada o informació que desitgeu conservar.",
