--- a/lang/da.json
+++ b/lang/da.json
@@ -189,6 +189,7 @@
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "Er du sikker? Dette fjerner skabelonen fra alle kontakter, men sletter ikke selve kontakterne.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "Er du sikker på, at du vil slette dette hold? Når et hold er slettet, vil alle dets ressourcer og data blive slettet permanent.",
   "Are you sure you want to delete your account? Once your account is deleted, all of its resources and data will be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "Er du sikker på, at du vil slette din konto? Når din konto er slettet, vil alle sine ressourcer og data blive slettet permanent. Indtast din adgangskode for at bekræfte, at du vil slette din konto permanent.",
+  "Are you sure you want to disable two factor authentication?": "Er du sikker på, at du vil deaktivere to faktorgodkendelse?",
   "Are you sure you would like to archive this contact?": "Er du sikker på, at du vil arkivere denne kontakt?",
   "Are you sure you would like to delete this API token?": "Er du sikker på, at du gerne vil slette dette API-token?",
   "Are you sure you would like to delete this contact? This will remove everything we know about this contact.": "Er du sikker på, at du vil slette denne kontakt? Dette vil fjerne alt, hvad vi ved om denne kontakt.",
@@ -579,8 +580,8 @@
   "Log in": "Log ind",
   "Login": "Log ind",
   "Login with:": "Login med:",
-  "Log Out": "Log ud",
   "Logout": "Log ud",
+  "Log Out": "Log ud",
   "Log Out Other Browser Sessions": "Log ud af andre browsersessioner",
   "Longest streak": "Længste streak",
   "Love": "Elsker",
@@ -670,6 +671,7 @@
   "of": "af",
   "Offered": "Tilbydes",
   "Once a team is deleted, all of its resources and data will be permanently deleted. Before deleting this team, please download any data or information regarding this team that you wish to retain.": "Når et hold er slettet, vil alle dets ressourcer og data blive slettet permanent. Før du sletter dette hold, skal du downloade alle data eller oplysninger om dette hold, som du ønsker at beholde.",
+  "Once two factor authentication is disabled, you will no longer be prompted for a secure, random token during authentication.": "Når to faktor -godkendelse er deaktiveret, bliver du ikke længere bedt om et sikkert, tilfældigt token under godkendelse.",
   "Once you cancel,": "Når du har annulleret,",
   "Once you click the Setup button below, you’ll have to open Telegram with the button we’ll provide you with. This will locate the Monica Telegram bot for you.": "Når du klikker på knappen Opsætning nedenfor, skal du åbne Telegram med den knap, vi giver dig. Dette vil finde Monica Telegram-bot for dig.",
   "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "Når din konto er slettet, vil alle dine ressourcer og data blive slettet permanent. Før du sletter din konto, skal du downloade alle data eller oplysninger, som du ønsker at beholde.",
