--- a/lang/es.json
+++ b/lang/es.json
@@ -189,6 +189,7 @@
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "¿Está seguro? Esto eliminará la plantilla de todos los contactos, pero no eliminará los contactos en sí.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "¿Está seguro que desea eliminar este equipo? Una vez que se elimina un equipo, todos sus recursos y datos se eliminarán de forma permanente.",
   "Are you sure you want to delete your account? Once your account is deleted, all of its resources and data will be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "¿Está seguro que desea eliminar su cuenta? Una vez que se elimine su cuenta, todos sus recursos y datos se eliminarán de forma permanente. Ingrese su contraseña para confirmar que desea eliminar su cuenta de forma permanente.",
+  "Are you sure you want to disable two factor authentication?": "¿Estás seguro de que quieres deshabilitar la autenticación de dos factores?",
   "Are you sure you would like to archive this contact?": "¿Está seguro de que desea archivar este contacto?",
   "Are you sure you would like to delete this API token?": "¿Está seguro que desea eliminar este token API?",
   "Are you sure you would like to delete this contact? This will remove everything we know about this contact.": "¿Está seguro de que desea eliminar este contacto? Esto eliminará todo lo que sabemos sobre este contacto.",
@@ -579,8 +580,8 @@
   "Log in": "Iniciar sesión",
   "Login": "Iniciar sesión",
   "Login with:": "Inicia con:",
-  "Log Out": "Finalizar sesión",
   "Logout": "Finalizar sesión",
+  "Log Out": "Finalizar sesión",
   "Log Out Other Browser Sessions": "Cerrar las demás sesiones",
   "Longest streak": "Racha más larga",
   "Love": "Amar",
@@ -670,6 +671,7 @@
   "of": "de",
   "Offered": "Ofrecido",
   "Once a team is deleted, all of its resources and data will be permanently deleted. Before deleting this team, please download any data or information regarding this team that you wish to retain.": "Una vez que se elimina un equipo, todos sus recursos y datos se eliminarán de forma permanente. Antes de eliminar este equipo, descargue cualquier dato o información sobre este equipo que desee conservar.",
+  "Once two factor authentication is disabled, you will no longer be prompted for a secure, random token during authentication.": "Una vez que dos factores de autenticación se deshabilitan, ya no se le solicitará un token seguro y aleatorio durante la autenticación.",
   "Once you cancel,": "Una vez que canceles,",
   "Once you click the Setup button below, you’ll have to open Telegram with the button we’ll provide you with. This will locate the Monica Telegram bot for you.": "Una vez que hagas clic en el botón Configuración a continuación, tendrás que abrir Telegram con el botón que te proporcionaremos. Esto localizará el bot de Monica Telegram por ti.",
   "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "Una vez que se elimine su cuenta, todos sus recursos y datos se eliminarán de forma permanente. Antes de borrar su cuenta, por favor descargue cualquier dato o información que desee conservar.",
