--- a/lang/fr.json
+++ b/lang/fr.json
@@ -189,6 +189,7 @@
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "Êtes-vous sûr⋅e? Cela supprimera le modèle de tous les contacts, mais ne supprimera pas les contacts eux-mêmes.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "Êtes-vous sûr·e de vouloir supprimer cette équipe ? Lorsqu’une équipe est supprimée, toutes les données associées seront définitivement supprimées.",
   "Are you sure you want to delete your account? Once your account is deleted, all of its resources and data will be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "Êtes-vous sûr·e de vouloir supprimer votre compte ? Une fois que votre compte est supprimé, toutes les données associées seront supprimées définitivement. Pour confirmer que vous voulez supprimer définitivement votre compte, renseignez votre mot de passe.",
+  "Are you sure you want to disable two factor authentication?": "Êtes-vous sûr de vouloir désactiver l’authentification à deux facteurs?",
   "Are you sure you would like to archive this contact?": "Êtes-vous sûr de vouloir archiver ce contact ?",
   "Are you sure you would like to delete this API token?": "Êtes-vous sûr·e de vouloir supprimer ce jeton API ?",
   "Are you sure you would like to delete this contact? This will remove everything we know about this contact.": "Êtes-vous sûr de vouloir supprimer ce contact ? Cela supprimera tout ce que nous savons sur ce contact.",
@@ -579,8 +580,8 @@
   "Log in": "Se connecter",
   "Login": "Connexion",
   "Login with:": "Se connecter avec :",
-  "Log Out": "Se déconnecter",
   "Logout": "Déconnexion",
+  "Log Out": "Se déconnecter",
   "Log Out Other Browser Sessions": "Déconnecter les sessions ouvertes sur d’autres navigateurs",
   "Longest streak": "La plus longue série",
   "Love": "Amour",
@@ -670,6 +671,7 @@
   "of": "de",
   "Offered": "Offert",
   "Once a team is deleted, all of its resources and data will be permanently deleted. Before deleting this team, please download any data or information regarding this team that you wish to retain.": "Une fois qu’une équipe est supprimée, toutes ses données seront supprimées définitivement. Avant de supprimer cette équipe, veuillez télécharger toutes données ou informations de cette équipe.",
+  "Once two factor authentication is disabled, you will no longer be prompted for a secure, random token during authentication.": "Une fois l’authentification à deux facteurs désactivée, vous ne serez plus invité à un jeton sécurisé et aléatoire pendant l’authentification.",
   "Once you cancel,": "Une fois que vous annulez,",
   "Once you click the Setup button below, you’ll have to open Telegram with the button we’ll provide you with. This will locate the Monica Telegram bot for you.": "Une fois que vous aurez cliqué sur le bouton Configurer ci-dessous, vous devrez ouvrir Telegram avec le bouton que nous vous fournirons. Cela localisera le bot Monica Telegram pour vous.",
   "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "Une fois que votre compte est supprimé, toutes vos données sont supprimées définitivement. Avant de supprimer votre compte, veuillez télécharger vos données.",
