--- a/lang/he.json
+++ b/lang/he.json
@@ -189,6 +189,7 @@
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "האם אתה בטוח? פעולה זו תסיר את התבנית מכל אנשי הקשר, אך לא תמחק את אנשי הקשר עצמם.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "אתה בטוח שאתה רוצה למחוק את הצוות הזה? ברגע שצוות נמחק, כל המשאבים והנתונים שלו יימחקו לצמיתות.",
   "Are you sure you want to delete your account? Once your account is deleted, all of its resources and data will be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "האם אתה בטוח שאתה רוצה למחוק את החשבון שלך? לאחר מחיקת חשבונך, כל המשאבים והנתונים שלו יימחקו לצמיתות. אנא הזן את הסיסמה שלך כדי לאשר שברצונך למחוק לצמיתות את החשבון שלך.",
+  "Are you sure you want to disable two factor authentication?": "האם אתה בטוח שאתה רוצה להשבית אימות שני גורמים?",
   "Are you sure you would like to archive this contact?": "האם אתה בטוח שברצונך להעביר איש קשר זה לארכיון?",
   "Are you sure you would like to delete this API token?": "האם אתה בטוח שאתה רוצה למחוק אסימון API זה?",
   "Are you sure you would like to delete this contact? This will remove everything we know about this contact.": "האם אתה בטוח שברצונך למחוק איש קשר זה? פעולה זו תסיר את כל מה שאנחנו יודעים על איש הקשר הזה.",
@@ -579,8 +580,8 @@
   "Log in": "התחבר",
   "Login": "התחברות",
   "Login with:": "התחבר עם:",
-  "Log Out": "התנתק",
   "Logout": "התנתקות",
+  "Log Out": "התנתק",
   "Log Out Other Browser Sessions": "להתנתק הפעלות דפדפן אחרות",
   "Longest streak": "הרצף הארוך ביותר",
   "Love": "אהבה",
@@ -670,6 +671,7 @@
   "of": "של",
   "Offered": "מוּצָע",
   "Once a team is deleted, all of its resources and data will be permanently deleted. Before deleting this team, please download any data or information regarding this team that you wish to retain.": "ברגע שצוות נמחק, כל המשאבים והנתונים שלו יימחקו לצמיתות. לפני מחיקת צוות זה, אנא הורד נתונים או מידע כלשהם בנוגע לצוות זה שברצונך לשמור.",
+  "Once two factor authentication is disabled, you will no longer be prompted for a secure, random token during authentication.": "לאחר שהושבת אימות שני גורמים, לא תתבקש עוד לאסימון מאובטח ואקראי במהלך האימות.",
   "Once you cancel,": "ברגע שאתה מבטל,",
   "Once you click the Setup button below, you’ll have to open Telegram with the button we’ll provide you with. This will locate the Monica Telegram bot for you.": "לאחר שתלחץ על כפתור ההגדרה למטה, תצטרך לפתוח את Telegram עם הכפתור שנספק לך. זה יאתר עבורך את הבוט Monica Telegram.",
   "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "לאחר מחיקת חשבונך, כל המשאבים והנתונים שלו יימחקו לצמיתות. לפני מחיקת החשבון שלך, אנא הורד נתונים או מידע שברצונך לשמור.",
