--- a/lang/hi.json
+++ b/lang/hi.json
@@ -189,6 +189,7 @@
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "क्या आपको यकीन है? यह सभी संपर्कों से टेम्प्लेट हटा देगा, लेकिन संपर्क स्वयं नहीं हटेंगे।",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "क्या आप वाकई इस टीम को हटाना चाहते हैं? एक बार जब कोई टीम हटा दी जाती है, तो उसके सभी संसाधन और डेटा स्थायी रूप से हटा दिए जाएंगे ।",
   "Are you sure you want to delete your account? Once your account is deleted, all of its resources and data will be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "क्या आप वाकई अपना खाता हटाना चाहते हैं? एक बार जब आपका खाता हटा दिया जाता है, तो उसके सभी संसाधन और डेटा स्थायी रूप से हटा दिए जाएंगे ।  कृपया यह पुष्टि करने के लिए अपना पासवर्ड दर्ज करें कि आप अपना खाता स्थायी रूप से हटाना चाहते हैं ।",
+  "Are you sure you want to disable two factor authentication?": "क्या आप सुनिश्चित हैं कि आप दो कारक प्रमाणीकरण को अक्षम करना चाहते हैं?",
   "Are you sure you would like to archive this contact?": "क्या आप वाकई इस संपर्क को संग्रहीत करना चाहेंगे?",
   "Are you sure you would like to delete this API token?": "क्या आप वाकई इस एपीआई टोकन को हटाना चाहते हैं?",
   "Are you sure you would like to delete this contact? This will remove everything we know about this contact.": "क्या आप वाकई इस संपर्क को हटाना चाहेंगे? इससे इस संपर्क के बारे में हम जो कुछ भी जानते हैं वह सब हट जाएगा।",
@@ -579,8 +580,8 @@
   "Log in": "लॉग इन करें",
   "Login": "लॉगिन करें",
   "Login with:": "साथ प्रवेश करना:",
-  "Log Out": "लॉग आउट करें",
   "Logout": "लॉगआउट",
+  "Log Out": "लॉग आउट करें",
   "Log Out Other Browser Sessions": "अन्य ब्राउज़र सत्र लॉग आउट करें",
   "Longest streak": "सबसे लंबी लकीर",
   "Love": "प्यार",
@@ -670,6 +671,7 @@
   "of": "की",
   "Offered": "की पेशकश की",
   "Once a team is deleted, all of its resources and data will be permanently deleted. Before deleting this team, please download any data or information regarding this team that you wish to retain.": "एक बार जब कोई टीम हटा दी जाती है, तो उसके सभी संसाधन और डेटा स्थायी रूप से हटा दिए जाएंगे ।  इस टीम को हटाने से पहले, कृपया इस टीम के बारे में कोई भी डेटा या जानकारी डाउनलोड करें जिसे आप बनाए रखना चाहते हैं ।",
+  "Once two factor authentication is disabled, you will no longer be prompted for a secure, random token during authentication.": "एक बार दो कारक प्रमाणीकरण अक्षम हो जाने के बाद, आपको अब प्रमाणीकरण के दौरान एक सुरक्षित, यादृच्छिक टोकन के लिए संकेत नहीं दिया जाएगा।",
   "Once you cancel,": "एक बार जब आप रद्द कर देते हैं,",
   "Once you click the Setup button below, you’ll have to open Telegram with the button we’ll provide you with. This will locate the Monica Telegram bot for you.": "एक बार जब आप नीचे सेटअप बटन पर क्लिक करते हैं, तो आपको उस बटन से टेलीग्राम खोलना होगा जो हम आपको प्रदान करेंगे। यह आपके लिए Monica टेलीग्राम बॉट का पता लगाएगा।",
   "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "एक बार जब आपका खाता हटा दिया जाता है, तो उसके सभी संसाधन और डेटा स्थायी रूप से हटा दिए जाएंगे ।  अपना खाता हटाने से पहले, कृपया कोई भी डेटा या जानकारी डाउनलोड करें जिसे आप बनाए रखना चाहते हैं ।",
