--- a/lang/ja.json
+++ b/lang/ja.json
@@ -189,6 +189,7 @@
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "本気ですか？これにより、すべての連絡先からテンプレートが削除されますが、連絡先自体は削除されません。",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "チームを削除しますか？ チームを削除すると、全てのデータが完全に削除されます。",
   "Are you sure you want to delete your account? Once your account is deleted, all of its resources and data will be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "アカウントを削除しますか？ アカウントを削除すると全てのデータが完全に削除されます。よろしければパスワードを入力してください。",
+  "Are you sure you want to disable two factor authentication?": "2つの要因認証を無効にしたいですか？",
   "Are you sure you would like to archive this contact?": "この連絡先をアーカイブしてもよろしいですか?",
   "Are you sure you would like to delete this API token?": "APIトークンを削除しますか？",
   "Are you sure you would like to delete this contact? This will remove everything we know about this contact.": "この連絡先を削除してもよろしいですか?これにより、この連絡先についてわかっているすべてが削除されます。",
@@ -579,8 +580,8 @@
   "Log in": "ログイン",
   "Login": "ログイン",
   "Login with:": "でログイン：",
-  "Log Out": "ログアウト",
   "Logout": "ログアウト",
+  "Log Out": "ログアウト",
   "Log Out Other Browser Sessions": "全ての端末からログアウト",
   "Longest streak": "最長連続記録",
   "Love": "愛",
@@ -670,6 +671,7 @@
   "of": "の",
   "Offered": "提供済み",
   "Once a team is deleted, all of its resources and data will be permanently deleted. Before deleting this team, please download any data or information regarding this team that you wish to retain.": "チームを削除すると、全てのデータが完全に削除されます。残しておきたいデータなどは削除前にダウンロードしてください。",
+  "Once two factor authentication is disabled, you will no longer be prompted for a secure, random token during authentication.": "2因子認証が無効になると、認証中に安全でランダムなトークンを求めることができなくなります。",
   "Once you cancel,": "一度キャンセルしていただきますと、",
   "Once you click the Setup button below, you’ll have to open Telegram with the button we’ll provide you with. This will locate the Monica Telegram bot for you.": "下の [セットアップ] ボタンをクリックしたら、提供されるボタンを使用して Telegram を開く必要があります。これにより、Monica Telegram ボットが見つかります。",
   "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "アカウントを削除すると、全てのデータが完全に削除されます。残しておきたいデータなどは削除前にダウンロードしてください。",
