--- a/lang/ml.json
+++ b/lang/ml.json
@@ -189,6 +189,7 @@
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "നിങ്ങൾക്ക് ഉറപ്പാണോ? ഇത് എല്ലാ കോൺടാക്റ്റുകളിൽ നിന്നും ടെംപ്ലേറ്റ് നീക്കംചെയ്യും, എന്നാൽ കോൺടാക്റ്റുകൾ തന്നെ ഇല്ലാതാക്കില്ല.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "ഈ ടീമിനെ ഇല്ലാതാക്കണമെന്ന് തീർച്ചയാണോ? ഒരു ടീം ഇല്ലാതാക്കിയാൽ, അതിന്റെ എല്ലാ ഉറവിടങ്ങളും ഡാറ്റയും ശാശ്വതമായി ഇല്ലാതാക്കപ്പെടും.",
   "Are you sure you want to delete your account? Once your account is deleted, all of its resources and data will be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "നിങ്ങളുടെ അക്കൗണ്ട് ഇല്ലാതാക്കണമെന്ന് തീർച്ചയാണോ? നിങ്ങളുടെ അക്കൗണ്ട് ഇല്ലാതാക്കിയാൽ, അതിന്റെ എല്ലാ ഉറവിടങ്ങളും ഡാറ്റയും ശാശ്വതമായി ഇല്ലാതാക്കപ്പെടും. നിങ്ങളുടെ അക്കൗണ്ട് ശാശ്വതമായി ഇല്ലാതാക്കാൻ നിങ്ങൾ ആഗ്രഹിക്കുന്നുവെന്ന് സ്ഥിരീകരിക്കുന്നതിന് ദയവായി നിങ്ങളുടെ പാസ്‌വേഡ് നൽകുക.",
+  "Are you sure you want to disable two factor authentication?": "രണ്ട് ഘടക പ്രാമാണീകരണം അപ്രാപ്തമാക്കാൻ നിങ്ങൾ ആഗ്രഹിക്കുന്നുണ്ടോ?",
   "Are you sure you would like to archive this contact?": "ഈ കോൺടാക്റ്റ് ആർക്കൈവ് ചെയ്യണമെന്ന് തീർച്ചയാണോ?",
   "Are you sure you would like to delete this API token?": "ഈ API ടോക്കൺ ഇല്ലാതാക്കണമെന്ന് തീർച്ചയാണോ?",
   "Are you sure you would like to delete this contact? This will remove everything we know about this contact.": "ഈ കോൺടാക്റ്റ് ഇല്ലാതാക്കണമെന്ന് തീർച്ചയാണോ? ഈ കോൺടാക്‌റ്റിനെക്കുറിച്ച് ഞങ്ങൾക്ക് അറിയാവുന്നതെല്ലാം ഇത് നീക്കം ചെയ്യും.",
@@ -580,8 +581,8 @@
   "Log in": "ലോഗിൻ",
   "Login": "ലോഗിൻ",
   "Login with:": "ഇതുപയോഗിച്ച് ലോഗിൻ ചെയ്യുക:",
-  "Log Out": "ലോഗ് ഔട്ട് ചെയ്യുക",
   "Logout": "പുറത്തുകടക്കുക",
+  "Log Out": "ലോഗ് ഔട്ട് ചെയ്യുക",
   "Log Out Other Browser Sessions": "മറ്റ് ബ്രൗസർ സെഷനുകൾ ലോഗ് ഔട്ട് ചെയ്യുക",
   "Longest streak": "ഏറ്റവും ദൈർഘ്യമേറിയ സ്ട്രീക്ക്",
   "Love": "സ്നേഹം",
@@ -671,6 +672,7 @@
   "of": "ന്റെ",
   "Offered": "വാഗ്ദാനം ചെയ്തു",
   "Once a team is deleted, all of its resources and data will be permanently deleted. Before deleting this team, please download any data or information regarding this team that you wish to retain.": "ഒരു ടീം ഇല്ലാതാക്കിയാൽ, അതിന്റെ എല്ലാ ഉറവിടങ്ങളും ഡാറ്റയും ശാശ്വതമായി ഇല്ലാതാക്കപ്പെടും. ഈ ടീമിനെ ഇല്ലാതാക്കുന്നതിന് മുമ്പ്, ഈ ടീമിനെ സംബന്ധിച്ച് നിങ്ങൾ നിലനിർത്താൻ ആഗ്രഹിക്കുന്ന ഏതെങ്കിലും ഡാറ്റയോ വിവരങ്ങളോ ഡൗൺലോഡ് ചെയ്യുക.",
+  "Once two factor authentication is disabled, you will no longer be prompted for a secure, random token during authentication.": "രണ്ട് ഫാക്ടർ പ്രാമാണീകരണം അപ്രാപ്തമാക്കിയുകഴിഞ്ഞാൽ, പ്രാമാണീകരണ സമയത്ത് സുരക്ഷിതവും ക്രമരഹിതമായ ടോക്കണിനായി നിങ്ങൾ ആവശ്യപ്പെടില്ല.",
   "Once you cancel,": "ഒരിക്കൽ നിങ്ങൾ റദ്ദാക്കി,",
   "Once you click the Setup button below, you’ll have to open Telegram with the button we’ll provide you with. This will locate the Monica Telegram bot for you.": "ചുവടെയുള്ള സജ്ജീകരണ ബട്ടണിൽ നിങ്ങൾ ക്ലിക്ക് ചെയ്‌തുകഴിഞ്ഞാൽ, ഞങ്ങൾ നിങ്ങൾക്ക് നൽകുന്ന ബട്ടൺ ഉപയോഗിച്ച് നിങ്ങൾ ടെലിഗ്രാം തുറക്കേണ്ടതുണ്ട്. ഇത് നിങ്ങൾക്കായി Monica ടെലിഗ്രാം ബോട്ട് കണ്ടെത്തും.",
   "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "നിങ്ങളുടെ അക്കൗണ്ട് ഇല്ലാതാക്കിയാൽ, അതിന്റെ എല്ലാ ഉറവിടങ്ങളും ഡാറ്റയും ശാശ്വതമായി ഇല്ലാതാക്കപ്പെടും. നിങ്ങളുടെ അക്കൗണ്ട് ഇല്ലാതാക്കുന്നതിന് മുമ്പ്, നിങ്ങൾ നിലനിർത്താൻ ആഗ്രഹിക്കുന്ന ഏതെങ്കിലും ഡാറ്റയോ വിവരങ്ങളോ ഡൗൺലോഡ് ചെയ്യുക.",
