--- a/lang/nl.json
+++ b/lang/nl.json
@@ -189,6 +189,7 @@
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "Weet je het zeker? Hierdoor wordt de sjabloon uit alle contacten verwijderd, maar worden de contacten zelf niet verwijderd.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "Weet je zeker dat je dit team wilt verwijderen? Zodra een team is verwijderd, worden alle bronnen en gegevens ook permanent verwijderd.",
   "Are you sure you want to delete your account? Once your account is deleted, all of its resources and data will be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "Weet je zeker dat je je account permanent wilt verwijderen? Als je account wordt verwijderd, worden alle gekoppelde bestanden en gegevens ook permanent verwijderd. Voer alsjeblieft je wachtwoord in, om te bevestigen dat je je account permanent wilt verwijderen.",
+  "Are you sure you want to disable two factor authentication?": "Weet u zeker dat u twee factorauthenticatie wilt uitschakelen?",
   "Are you sure you would like to archive this contact?": "Weet u zeker dat u dit contact wilt archiveren?",
   "Are you sure you would like to delete this API token?": "Weet je zeker dat je deze API-token wilt verwijderen?",
   "Are you sure you would like to delete this contact? This will remove everything we know about this contact.": "Weet u zeker dat u dit contact wilt verwijderen? Hiermee wordt alles verwijderd wat we over dit contact weten.",
@@ -579,8 +580,8 @@
   "Log in": "Inloggen",
   "Login": "Inloggen",
   "Login with:": "Login met:",
-  "Log Out": "Uitloggen",
   "Logout": "Uitloggen",
+  "Log Out": "Uitloggen",
   "Log Out Other Browser Sessions": "Uitloggen bij alle sessies",
   "Longest streak": "Langste reeks",
   "Love": "Liefde",
@@ -670,6 +671,7 @@
   "of": "van",
   "Offered": "Aangeboden",
   "Once a team is deleted, all of its resources and data will be permanently deleted. Before deleting this team, please download any data or information regarding this team that you wish to retain.": "Zodra een team is verwijderd, worden alle bronnen en gegevens permanent verwijderd. Download voordat je dit team verwijdert alle gegevens of informatie over dit team die je wilt behouden.",
+  "Once two factor authentication is disabled, you will no longer be prompted for a secure, random token during authentication.": "Zodra twee factorauthenticatie is uitgeschakeld, wordt u niet langer gevraagd om een ​​veilige, willekeurige token tijdens authenticatie.",
   "Once you cancel,": "Zodra u annuleert,",
   "Once you click the Setup button below, you’ll have to open Telegram with the button we’ll provide you with. This will locate the Monica Telegram bot for you.": "Zodra u op de onderstaande knop Instellen klikt, moet u Telegram openen met de knop die wij u ter beschikking stellen. Hiermee wordt de Monica Telegram-bot voor u gelokaliseerd.",
   "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "Als je account wordt verwijderd, worden alle gekoppelde bestanden en gegevens ook permanent verwijderd. Sla alsjeblieft alle data op die je wilt behouden, voordat je je account verwijderd.",
