--- a/lang/nn.json
+++ b/lang/nn.json
@@ -189,6 +189,7 @@
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "Er du sikker? Dette fjerner malen fra alle kontakter, men sletter ikke selve kontaktene.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "Er du sikker på at du vil slette dette teamet? Når et team er slettet, vil alle dets ressurser og data bli slettet permanent.",
   "Are you sure you want to delete your account? Once your account is deleted, all of its resources and data will be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "Er du sikker på at du vil slette kontoen din? Når kontoen din er slettet, slettes alle ressursene og dataene permanent. Skriv inn passordet ditt for å bekrefte at du ønsker å slette kontoen din permanent.",
+  "Are you sure you want to disable two factor authentication?": "Er du sikker på at du vil deaktivere to faktorautentisering?",
   "Are you sure you would like to archive this contact?": "Er du sikker på at du vil arkivere denne kontakten?",
   "Are you sure you would like to delete this API token?": "Er du sikker på at du vil slette dette API-tokenet?",
   "Are you sure you would like to delete this contact? This will remove everything we know about this contact.": "Er du sikker på at du vil slette denne kontakten? Dette vil fjerne alt vi vet om denne kontakten.",
@@ -579,8 +580,8 @@
   "Log in": "Logg Inn",
   "Login": "Logg inn",
   "Login with:": "Logg inn med:",
-  "Log Out": "Logg ut",
   "Logout": "Logg ut",
+  "Log Out": "Logg ut",
   "Log Out Other Browser Sessions": "Logg ut andre nettleserøkter",
   "Longest streak": "Lengste rekke",
   "Love": "Kjærlighet",
@@ -670,6 +671,7 @@
   "of": "av",
   "Offered": "Tilbys",
   "Once a team is deleted, all of its resources and data will be permanently deleted. Before deleting this team, please download any data or information regarding this team that you wish to retain.": "Når et team er slettet, vil alle dets ressurser og data bli slettet permanent. Før du sletter dette teamet, last ned all data eller informasjon om dette teamet som du ønsker å beholde.",
+  "Once two factor authentication is disabled, you will no longer be prompted for a secure, random token during authentication.": "Når to faktorautentisering er deaktivert, vil du ikke lenger bli bedt om et sikkert, tilfeldig token under autentisering.",
   "Once you cancel,": "Når du avbryter,",
   "Once you click the Setup button below, you’ll have to open Telegram with the button we’ll provide you with. This will locate the Monica Telegram bot for you.": "Når du klikker på Oppsett-knappen nedenfor, må du åpne Telegram med knappen vi gir deg. Dette vil finne Monica Telegram-boten for deg.",
   "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "Når kontoen din er slettet, slettes alle ressursene og dataene permanent. Før du sletter kontoen din, last ned data eller informasjon du ønsker å beholde.",
