--- a/lang/pl.json
+++ b/lang/pl.json
@@ -189,6 +189,7 @@
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "Jesteś pewny? Spowoduje to usunięcie szablonu ze wszystkich kontaktów, ale nie spowoduje usunięcia samych kontaktów.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "Czy na pewno chcesz usunąć ten zespół? Po usunięciu zespołu wszystkie jego zasoby i dane zostaną trwale usunięte.",
   "Are you sure you want to delete your account? Once your account is deleted, all of its resources and data will be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "Czy na pewno chcesz usunąć swoje konto? Po usunięciu konta wszystkie jego zasoby i dane zostaną trwale usunięte. Wprowadź hasło, aby potwierdzić, że chcesz trwale usunąć swoje konto.",
+  "Are you sure you want to disable two factor authentication?": "Czy na pewno chcesz wyłączyć uwierzytelnianie dwóch czynników?",
   "Are you sure you would like to archive this contact?": "Czy na pewno chcesz zarchiwizować ten kontakt?",
   "Are you sure you would like to delete this API token?": "Czy na pewno chcesz usunąć ten token API?",
   "Are you sure you would like to delete this contact? This will remove everything we know about this contact.": "Czy na pewno chcesz usunąć ten kontakt? Spowoduje to usunięcie wszystkiego, co wiemy o tym kontakcie.",
@@ -579,8 +580,8 @@
   "Log in": "Zaloguj się",
   "Login": "Logowanie",
   "Login with:": "Zaloguj się z:",
-  "Log Out": "Wyloguj się",
   "Logout": "Wyloguj",
+  "Log Out": "Wyloguj się",
   "Log Out Other Browser Sessions": "Wyloguj inne sesje przeglądarki",
   "Longest streak": "Najdłuższa passa",
   "Love": "Miłość",
@@ -670,6 +671,7 @@
   "of": "z",
   "Offered": "Oferowany",
   "Once a team is deleted, all of its resources and data will be permanently deleted. Before deleting this team, please download any data or information regarding this team that you wish to retain.": "Po usunięciu zespołu wszystkie jego zasoby i dane zostaną trwale usunięte. Przed usunięciem tego zespołu pobierz wszelkie dane lub informacje dotyczące tego zespołu, które chcesz zachować.",
+  "Once two factor authentication is disabled, you will no longer be prompted for a secure, random token during authentication.": "Po wyłączeniu uwierzytelniania dwóch współczynników nie będziesz już poproszony o bezpieczny, losowy token podczas uwierzytelniania.",
   "Once you cancel,": "Gdy anulujesz,",
   "Once you click the Setup button below, you’ll have to open Telegram with the button we’ll provide you with. This will locate the Monica Telegram bot for you.": "Po kliknięciu przycisku Konfiguracja poniżej będziesz musiał otworzyć Telegram za pomocą przycisku, który Ci udostępnimy. Spowoduje to zlokalizowanie bota Monica Telegram.",
   "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "Po usunięciu konta wszystkie jego zasoby i dane zostaną trwale usunięte. Przed usunięciem konta pobierz wszelkie dane albo informacje, które chcesz zachować.",
