--- a/lang/pt.json
+++ b/lang/pt.json
@@ -189,6 +189,7 @@
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "Tem certeza? Isso removerá o modelo de todos os contatos, mas não excluirá os contatos em si.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "Tem a certeza que pretende eliminar esta equipa? Uma vez eliminada, todos os seus recursos e dados serão permanentemente eliminados.",
   "Are you sure you want to delete your account? Once your account is deleted, all of its resources and data will be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "Tem a certeza que deseja eliminar a conta? Uma vez eliminada a conta, todos os recursos e dados serão eliminados permanentemente. Por favor introduza a sua palavra-passe para confirmar que deseja eliminar permanentemente a sua conta.",
+  "Are you sure you want to disable two factor authentication?": "Tem certeza de que deseja desativar a autenticação de dois fatores?",
   "Are you sure you would like to archive this contact?": "Tem certeza de que deseja arquivar este contato?",
   "Are you sure you would like to delete this API token?": "Tem a certeza que pretende eliminar este API Token?",
   "Are you sure you would like to delete this contact? This will remove everything we know about this contact.": "Tem certeza de que deseja excluir este contato? Isso removerá tudo o que sabemos sobre esse contato.",
@@ -579,8 +580,8 @@
   "Log in": "Iniciar sessão",
   "Login": "Iniciar Sessão",
   "Login with:": "Faça login com:",
-  "Log Out": "Terminar Sessão",
   "Logout": "Terminar Sessão",
+  "Log Out": "Terminar Sessão",
   "Log Out Other Browser Sessions": "Terminar Outras Sessões de Navegador",
   "Longest streak": "Sequência mais longa",
   "Love": "Amor",
@@ -670,6 +671,7 @@
   "of": "de",
   "Offered": "Oferecido",
   "Once a team is deleted, all of its resources and data will be permanently deleted. Before deleting this team, please download any data or information regarding this team that you wish to retain.": "Uma vez eliminada a equipa, todos os seus recursos e dados serão eliminados de forma permanente. Antes de eliminar esta equipa, por favor descarregue todos os dados ou informações relativos a esta equipa que deseje manter.",
+  "Once two factor authentication is disabled, you will no longer be prompted for a secure, random token during authentication.": "Depois que a autenticação de dois fatores estiver desativada, você não será mais solicitado para um token aleatório seguro durante a autenticação.",
   "Once you cancel,": "Depois de cancelar,",
   "Once you click the Setup button below, you’ll have to open Telegram with the button we’ll provide you with. This will locate the Monica Telegram bot for you.": "Depois de clicar no botão Configurar abaixo, você terá que abrir o Telegram com o botão que forneceremos. Isso localizará o bot Monica Telegram para você.",
   "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "Uma vez eliminada a conta, todos os recursos e dados serão eliminados permanentemente. Antes de eliminar a conta, por favor descarregue quaisquer dados ou informações que deseje manter.",
