--- a/lang/ro.json
+++ b/lang/ro.json
@@ -189,6 +189,7 @@
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "Esti sigur? Acest lucru va elimina șablonul din toate contactele, dar nu va șterge persoanele de contact în sine.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "Sunteți sigur că doriți să ștergeți această echipă? Odată ce o echipă este ștearsă, toate resursele și datele sale vor fi șterse definitiv.",
   "Are you sure you want to delete your account? Once your account is deleted, all of its resources and data will be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "Sunteți sigur că doriți să vă ștergeți contul? Odată ce contul dvs. este șters, toate resursele și datele sale vor fi șterse definitiv. Introduceți parola pentru a confirma că doriți să vă ștergeți definitiv contul.",
+  "Are you sure you want to disable two factor authentication?": "Ești sigur că vrei să dezactivați autentificarea cu doi factori?",
   "Are you sure you would like to archive this contact?": "Sigur doriți să arhivați această persoană de contact?",
   "Are you sure you would like to delete this API token?": "Sunteți sigur că doriți să ștergeți acest token API?",
   "Are you sure you would like to delete this contact? This will remove everything we know about this contact.": "Sigur doriți să ștergeți această persoană de contact? Acest lucru va elimina tot ce știm despre acest contact.",
@@ -579,8 +580,8 @@
   "Log in": "Autentificare",
   "Login": "Autentificare",
   "Login with:": "Logheaza-te cu:",
-  "Log Out": "Deconectează",
   "Logout": "Deautentificare",
+  "Log Out": "Deconectează",
   "Log Out Other Browser Sessions": "Deconectați Alte Sesiuni De Browser",
   "Longest streak": "Cea mai lungă serie",
   "Love": "Dragoste",
@@ -670,6 +671,7 @@
   "of": "din",
   "Offered": "A oferit",
   "Once a team is deleted, all of its resources and data will be permanently deleted. Before deleting this team, please download any data or information regarding this team that you wish to retain.": "Odată ce o echipă este ștearsă, toate resursele și datele sale vor fi șterse definitiv. Înainte de a șterge această echipă, vă rugăm să descărcați orice date sau informații referitoare la această echipă pe care doriți să le păstrați.",
+  "Once two factor authentication is disabled, you will no longer be prompted for a secure, random token during authentication.": "Odată ce autentificarea cu doi factori este dezactivată, nu vi se va mai solicita un jeton sigur, aleatoriu, în timpul autentificării.",
   "Once you cancel,": "Odată ce anulați,",
   "Once you click the Setup button below, you’ll have to open Telegram with the button we’ll provide you with. This will locate the Monica Telegram bot for you.": "După ce faceți clic pe butonul Configurare de mai jos, va trebui să deschideți Telegram cu butonul pe care vi-l vom furniza. Aceasta va localiza botul Monica Telegram pentru dvs.",
   "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "Odată ce contul dvs. este șters, toate resursele și datele sale vor fi șterse definitiv. Înainte de a șterge contul, vă rugăm să descărcați orice date sau informații pe care doriți să le păstrați.",
