--- a/lang/ru.json
+++ b/lang/ru.json
@@ -189,6 +189,7 @@
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "Вы уверены? Это удалит шаблон из всех контактов, но не удалит сами контакты.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "Вы уверены что хотите удалить эту команду? После удаления команды все её ресурсы и данные будут удалены без возможности восстановления.",
   "Are you sure you want to delete your account? Once your account is deleted, all of its resources and data will be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "Вы уверены что хотите удалить свою учётную запись? После удаления Вашей учётной записи все её ресурсы и данные будут удалены без возможности восстановления. Пожалуйста, введите свой пароль для подтверждения удаления учётной записи.",
+  "Are you sure you want to disable two factor authentication?": "Вы уверены, что хотите отключить двухфакторную аутентификацию?",
   "Are you sure you would like to archive this contact?": "Вы уверены, что хотите заархивировать этот контакт?",
   "Are you sure you would like to delete this API token?": "Вы уверены что хотите удалить этот API токен?",
   "Are you sure you would like to delete this contact? This will remove everything we know about this contact.": "Вы уверены, что хотите удалить этот контакт? Это приведет к удалению всего, что мы знаем об этом контакте.",
@@ -579,8 +580,8 @@
   "Log in": "Войти",
   "Login": "Войти",
   "Login with:": "Войдите с:",
-  "Log Out": "Выйти",
   "Logout": "Выйти",
+  "Log Out": "Выйти",
   "Log Out Other Browser Sessions": "Завершить другие сессии",
   "Longest streak": "Самая длинная серия",
   "Love": "Любовь",
@@ -670,6 +671,7 @@
   "of": "из",
   "Offered": "Предложенный",
   "Once a team is deleted, all of its resources and data will be permanently deleted. Before deleting this team, please download any data or information regarding this team that you wish to retain.": "После удаления команды все её ресурсы и данные будут удалены без возможности восстановления. Перед удалением скачайте данные и информацию о команде, которые хотите сохранить.",
+  "Once two factor authentication is disabled, you will no longer be prompted for a secure, random token during authentication.": "После отключения двух факторной аутентификации вам больше не будет предложено для безопасного, случайного токена во время аутентификации.",
   "Once you cancel,": "Как только вы отмените,",
   "Once you click the Setup button below, you’ll have to open Telegram with the button we’ll provide you with. This will locate the Monica Telegram bot for you.": "После того, как вы нажмете кнопку «Настроить» ниже, вам нужно будет открыть Telegram с помощью кнопки, которую мы вам предоставим. Это позволит вам найти бота Monica Telegram.",
   "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "После удаления Вашей учётной записи все её ресурсы и данные будут удалены без возможности восстановления. Перед удалением учётной записи загрузите данные и информацию, которую хотите сохранить.",
