--- a/lang/sv.json
+++ b/lang/sv.json
@@ -189,6 +189,7 @@
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "Är du säker? Detta tar bort mallen från alla kontakter, men tar inte bort kontakterna själva.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "Är du säker på att du vill ta bort det här laget? När ett lag har tagits bort kommer alla dess resurser och data att raderas permanent.",
   "Are you sure you want to delete your account? Once your account is deleted, all of its resources and data will be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "Är du säker på att du vill ta bort ditt konto? När ditt konto har tagits bort kommer alla dess resurser och data att raderas permanent. Ange ditt lösenord för att bekräfta att du vill ta bort ditt konto permanent.",
+  "Are you sure you want to disable two factor authentication?": "Är du säker på att du vill inaktivera två faktorautentisering?",
   "Are you sure you would like to archive this contact?": "Är du säker på att du vill arkivera den här kontakten?",
   "Are you sure you would like to delete this API token?": "Är du säker på att du vill ta bort denna API-token?",
   "Are you sure you would like to delete this contact? This will remove everything we know about this contact.": "Är du säker på att du vill ta bort den här kontakten? Detta tar bort allt vi vet om den här kontakten.",
@@ -579,8 +580,8 @@
   "Log in": "Inloggning",
   "Login": "Logga in",
   "Login with:": "Logga in med:",
-  "Log Out": "utloggning",
   "Logout": "Logga ut",
+  "Log Out": "utloggning",
   "Log Out Other Browser Sessions": "Logga Ut Andra Webbläsarsessioner",
   "Longest streak": "Längsta rad",
   "Love": "Kärlek",
@@ -670,6 +671,7 @@
   "of": "av",
   "Offered": "Erbjuds",
   "Once a team is deleted, all of its resources and data will be permanently deleted. Before deleting this team, please download any data or information regarding this team that you wish to retain.": "När ett lag har tagits bort kommer alla dess resurser och data att raderas permanent. Innan du tar bort det här laget, ladda ner data eller information om det här laget som du vill behålla.",
+  "Once two factor authentication is disabled, you will no longer be prompted for a secure, random token during authentication.": "När två faktorautentisering är inaktiverade kommer du inte längre att uppmanas till ett säkert, slumpmässigt token under autentisering.",
   "Once you cancel,": "När du avbokar,",
   "Once you click the Setup button below, you’ll have to open Telegram with the button we’ll provide you with. This will locate the Monica Telegram bot for you.": "När du klickar på knappen Setup nedan måste du öppna Telegram med knappen vi förser dig med. Detta kommer att hitta Monica Telegram-boten åt dig.",
   "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "När ditt konto har tagits bort kommer alla dess resurser och data att raderas permanent. Innan du tar bort ditt konto, ladda ner data eller information som du vill behålla.",
