--- a/lang/te.json
+++ b/lang/te.json
@@ -189,6 +189,7 @@
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "మీరు చెప్పేది నిజమా? ఇది అన్ని కాంటాక్ట్‌ల నుండి టెంప్లేట్‌ను తీసివేస్తుంది, కానీ కాంటాక్ట్‌లను స్వయంగా తొలగించదు.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "మీరు ఖచ్చితంగా ఈ బృందాన్ని తొలగించాలనుకుంటున్నారా? బృందం తొలగించబడిన తర్వాత, దాని వనరులు మరియు డేటా మొత్తం శాశ్వతంగా తొలగించబడతాయి.",
   "Are you sure you want to delete your account? Once your account is deleted, all of its resources and data will be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "మీరు ఖచ్చితంగా మీ ఖాతాను తొలగించాలనుకుంటున్నారా? మీ ఖాతా తొలగించబడిన తర్వాత, దాని వనరులు మరియు డేటా మొత్తం శాశ్వతంగా తొలగించబడతాయి. మీరు మీ ఖాతాను శాశ్వతంగా తొలగించాలనుకుంటున్నారని నిర్ధారించడానికి దయచేసి మీ పాస్‌వర్డ్‌ను నమోదు చేయండి.",
+  "Are you sure you want to disable two factor authentication?": "మీరు ఖచ్చితంగా రెండు కారకాల ప్రామాణీకరణను నిలిపివేయాలనుకుంటున్నారా?",
   "Are you sure you would like to archive this contact?": "మీరు ఖచ్చితంగా ఈ పరిచయాన్ని ఆర్కైవ్ చేయాలనుకుంటున్నారా?",
   "Are you sure you would like to delete this API token?": "మీరు ఖచ్చితంగా ఈ API టోకెన్‌ని తొలగించాలనుకుంటున్నారా?",
   "Are you sure you would like to delete this contact? This will remove everything we know about this contact.": "మీరు ఖచ్చితంగా ఈ పరిచయాన్ని తొలగించాలనుకుంటున్నారా? ఇది ఈ పరిచయం గురించి మనకు తెలిసిన ప్రతిదాన్ని తీసివేస్తుంది.",
@@ -580,8 +581,8 @@
   "Log in": "ప్రవేశించండి",
   "Login": "ప్రవేశించండి",
   "Login with:": "తో లాగిన్ అవ్వండి:",
-  "Log Out": "లాగ్ అవుట్ చేయండి",
   "Logout": "లాగ్అవుట్",
+  "Log Out": "లాగ్ అవుట్ చేయండి",
   "Log Out Other Browser Sessions": "ఇతర బ్రౌజర్ సెషన్‌లను లాగ్ అవుట్ చేయండి",
   "Longest streak": "పొడవైన గీత",
   "Love": "ప్రేమ",
@@ -671,6 +672,7 @@
   "of": "యొక్క",
   "Offered": "ఇచ్చింది",
   "Once a team is deleted, all of its resources and data will be permanently deleted. Before deleting this team, please download any data or information regarding this team that you wish to retain.": "బృందం తొలగించబడిన తర్వాత, దాని వనరులు మరియు డేటా మొత్తం శాశ్వతంగా తొలగించబడతాయి. ఈ బృందాన్ని తొలగించే ముందు, దయచేసి మీరు ఈ బృందానికి సంబంధించిన ఏదైనా డేటా లేదా సమాచారాన్ని డౌన్‌లోడ్ చేసుకోండి.",
+  "Once two factor authentication is disabled, you will no longer be prompted for a secure, random token during authentication.": "రెండు కారకాల ప్రామాణీకరణ నిలిపివేయబడిన తర్వాత, ప్రామాణీకరణ సమయంలో మీరు ఇకపై సురక్షితమైన, యాదృచ్ఛిక టోకెన్ కోసం ప్రాంప్ట్ చేయబడరు.",
   "Once you cancel,": "మీరు రద్దు చేసిన తర్వాత,",
   "Once you click the Setup button below, you’ll have to open Telegram with the button we’ll provide you with. This will locate the Monica Telegram bot for you.": "మీరు దిగువ సెటప్ బటన్‌ను క్లిక్ చేసిన తర్వాత, మేము మీకు అందించే బటన్‌తో మీరు టెలిగ్రామ్‌ను తెరవాలి. ఇది మీ కోసం Monica టెలిగ్రామ్ బాట్‌ను కనుగొంటుంది.",
   "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "మీ ఖాతా తొలగించబడిన తర్వాత, దాని వనరులు మరియు డేటా మొత్తం శాశ్వతంగా తొలగించబడతాయి. మీ ఖాతాను తొలగించే ముందు, దయచేసి మీరు ఉంచాలనుకునే ఏదైనా డేటా లేదా సమాచారాన్ని డౌన్‌లోడ్ చేయండి.",
