--- a/lang/tr.json
+++ b/lang/tr.json
@@ -189,6 +189,7 @@
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "Emin misin? Bu, şablonu tüm kişilerden kaldıracaktır ancak kişilerin kendisi silinmeyecektir.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "Bu ekibi silmek istediğinizden emin misiniz? Bir ekip silindiğinde, tüm kaynakları ve verileri kalıcı olarak silinecektir.",
   "Are you sure you want to delete your account? Once your account is deleted, all of its resources and data will be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "Hesabınızı silmek istediğinizden emin misiniz? Hesabınız silindiğinde, tüm kaynakları ve verileri kalıcı olarak silinecektir. Lütfen hesabınızı kalıcı olarak silmek istediğinizi onaylamak için parolanızı girin.",
+  "Are you sure you want to disable two factor authentication?": "İki faktörlü kimlik doğrulamasını devre dışı bırakmak istediğinizden emin misiniz?",
   "Are you sure you would like to archive this contact?": "Bu kişiyi arşivlemek istediğinizden emin misiniz?",
   "Are you sure you would like to delete this API token?": "Bu API jetonunu silmek istediğinizden emin misiniz?",
   "Are you sure you would like to delete this contact? This will remove everything we know about this contact.": "Bu kişiyi silmek istediğinizden emin misiniz? Bu, bu kişi hakkında bildiğimiz her şeyi ortadan kaldıracak.",
@@ -579,8 +580,8 @@
   "Log in": "Giriş yap",
   "Login": "Giriş Yap",
   "Login with:": "İle giriş:",
-  "Log Out": "Çıkış Yap",
   "Logout": "Çıkış Yap",
+  "Log Out": "Çıkış Yap",
   "Log Out Other Browser Sessions": "Diğer Tarayıcılardaki Oturumları Sonlandır",
   "Longest streak": "En uzun seri",
   "Love": "Aşk",
@@ -670,6 +671,7 @@
   "of": "-den",
   "Offered": "Sunulan",
   "Once a team is deleted, all of its resources and data will be permanently deleted. Before deleting this team, please download any data or information regarding this team that you wish to retain.": "Bir ekip silindiğinde, tüm kaynakları ve verileri kalıcı olarak silinecektir. Bu ekibi silmeden önce, lütfen bu ekiple ilgili saklamak istediğiniz tüm verileri veya bilgileri indirin.",
+  "Once two factor authentication is disabled, you will no longer be prompted for a secure, random token during authentication.": "İki faktörlü kimlik doğrulama devre dışı bırakıldıktan sonra, kimlik doğrulama sırasında artık güvenli ve rastgele bir jeton istenmez.",
   "Once you cancel,": "İptal ettiğinizde,",
   "Once you click the Setup button below, you’ll have to open Telegram with the button we’ll provide you with. This will locate the Monica Telegram bot for you.": "Aşağıdaki Kurulum butonuna tıkladıktan sonra size vereceğimiz buton ile Telegram’ı açmanız gerekecektir. Bu sizin için Monica Telegram botunu bulacaktır.",
   "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "Hesabınız silindiğinde, tüm kaynakları ve verileri kalıcı olarak silinecektir. Hesabınızı silmeden önce lütfen saklamak istediğiniz tüm verileri veya bilgileri indirin.",
