--- a/lang/ur.json
+++ b/lang/ur.json
@@ -189,6 +189,7 @@
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "کیا تمہیں یقین ہے؟ یہ تمام رابطوں سے ٹیمپلیٹ کو ہٹا دے گا، لیکن خود روابط کو حذف نہیں کرے گا۔",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "ہیں آپ کو اس بات کا یقین آپ کو خارج کرنا چاہتے ہیں اس کی ٹیم? ایک بار ایک ٹیم سے خارج کر دیا ہے, اس کے تمام وسائل اور اعداد و شمار ہو جائے گا مستقل طور پر خارج کر دیا.",
   "Are you sure you want to delete your account? Once your account is deleted, all of its resources and data will be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "آپ چاہتے ہیں کو خارج کرنے کے لئے آپ کے اکاؤنٹ? ایک بار جب آپ کے اکاؤنٹ کو خارج کر دیا, اس کے تمام وسائل اور اعداد و شمار ہو جائے گا مستقل طور پر خارج کر دیا. براہ مہربانی آپ اپنا پاس ورڈ درج کرنے کے لئے اس بات کی تصدیق کرنے کے لئے چاہتے ہیں کو مستقل طور پر آپ کے اکاؤنٹ کو خارج.",
+  "Are you sure you want to disable two factor authentication?": "کیا آپ واقعی دو عنصر کی توثیق کو غیر فعال کرنا چاہتے ہیں؟",
   "Are you sure you would like to archive this contact?": "کیا آپ واقعی اس رابطے کو آرکائیو کرنا چاہیں گے؟",
   "Are you sure you would like to delete this API token?": "ہیں آپ کو اس بات کا یقین کرنے کے لئے چاہتے ہیں کو خارج کر دیں یہ API ٹوکن?",
   "Are you sure you would like to delete this contact? This will remove everything we know about this contact.": "کیا آپ واقعی اس رابطے کو حذف کرنا چاہیں گے؟ اس سے وہ سب کچھ ہٹ جائے گا جو ہم اس رابطے کے بارے میں جانتے ہیں۔",
@@ -579,8 +580,8 @@
   "Log in": "میں لاگ ان کریں",
   "Login": "لاگ ان کریں",
   "Login with:": "کے ساتھ لاگ ان:",
-  "Log Out": "باہر لاگ ان کریں",
   "Logout": "لاگ آوٹ",
+  "Log Out": "باہر لاگ ان کریں",
   "Log Out Other Browser Sessions": "لاگ آؤٹ دیگر براؤزر سیشن",
   "Longest streak": "سب سے طویل سلسلہ",
   "Love": "محبت",
@@ -670,6 +671,7 @@
   "of": "کی",
   "Offered": "پیشکش کی",
   "Once a team is deleted, all of its resources and data will be permanently deleted. Before deleting this team, please download any data or information regarding this team that you wish to retain.": "ایک بار ایک ٹیم سے خارج کر دیا ہے, اس کے تمام وسائل اور اعداد و شمار ہو جائے گا مستقل طور پر خارج کر دیا. اس سے پہلے حذف کر رہا ہے اس کی ٹیم, ڈاؤن لوڈ کریں کسی بھی ڈیٹا یا معلومات کے بارے میں اس کی ٹیم ہے کہ آپ کی خواہش کو برقرار رکھنے کے لئے.",
+  "Once two factor authentication is disabled, you will no longer be prompted for a secure, random token during authentication.": "ایک بار جب دو عنصر کی توثیق غیر فعال ہوجائے تو ، آپ کو تصدیق کے دوران محفوظ ، بے ترتیب ٹوکن کے لئے مزید اشارہ نہیں کیا جائے گا۔",
   "Once you cancel,": "ایک بار جب آپ منسوخ کر دیں،",
   "Once you click the Setup button below, you’ll have to open Telegram with the button we’ll provide you with. This will locate the Monica Telegram bot for you.": "نیچے دیے گئے سیٹ اپ بٹن پر کلک کرنے کے بعد، آپ کو اس بٹن کے ساتھ ٹیلیگرام کھولنا پڑے گا جو ہم آپ کو فراہم کریں گے۔ یہ آپ کے لیے Monica ٹیلیگرام بوٹ تلاش کرے گا۔",
   "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "ایک بار جب آپ کے اکاؤنٹ کو خارج کر دیا, اس کے تمام وسائل اور اعداد و شمار ہو جائے گا مستقل طور پر خارج کر دیا. اس سے پہلے حذف کرنے سے آپ کے اکاؤنٹ, براہ مہربانی ڈاؤن لوڈ ، اتارنا کسی بھی ڈیٹا یا معلومات کو کہ آپ کی خواہش کو برقرار رکھنے کے لئے.",
