--- a/lang/zh_CN.json
+++ b/lang/zh_CN.json
@@ -189,6 +189,7 @@
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "你确定吗？这将从所有联系人中删除模板，但不会删除联系人本身。",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "您确定要删除这个团队吗？一旦一个团队被删除，它的所有资源和数据将被永久删除。",
   "Are you sure you want to delete your account? Once your account is deleted, all of its resources and data will be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "您确定要删除您的账户吗？一旦您的账户被删除，其所有资源和数据将被永久删除。请输入您的密码，确认您要永久删除您的账户。",
+  "Are you sure you want to disable two factor authentication?": "您确定要禁用两个因素身份验证吗？",
   "Are you sure you would like to archive this contact?": "您确定要存档此联系人吗？",
   "Are you sure you would like to delete this API token?": "您确定要删除这个 API 令牌吗？",
   "Are you sure you would like to delete this contact? This will remove everything we know about this contact.": "您确定要删除此联系人吗？这将删除我们所知道的有关此联系人的所有信息。",
@@ -579,8 +580,8 @@
   "Log in": "登录",
   "Login": "登录",
   "Login with:": "登录方式：",
-  "Log Out": "登出",
   "Logout": "登出",
+  "Log Out": "登出",
   "Log Out Other Browser Sessions": "注销其他浏览器的会话",
   "Longest streak": "最长连续纪录",
   "Love": "爱",
@@ -670,6 +671,7 @@
   "of": "于",
   "Offered": "提供",
   "Once a team is deleted, all of its resources and data will be permanently deleted. Before deleting this team, please download any data or information regarding this team that you wish to retain.": "一旦团队被删除，其所有资源和数据将被永久删除。在删除该团队之前，请下载您希望保留的有关该团队的任何数据或信息。",
+  "Once two factor authentication is disabled, you will no longer be prompted for a secure, random token during authentication.": "一旦禁用了两个因素身份验证，您将不再提示您在身份验证期间进行安全的随机令牌。",
   "Once you cancel,": "一旦取消，",
   "Once you click the Setup button below, you’ll have to open Telegram with the button we’ll provide you with. This will locate the Monica Telegram bot for you.": "单击下面的“设置”按钮后，您必须使用我们为您提供的按钮打开 Telegram。这将为您找到 Monica Telegram 机器人。",
   "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "一旦您的账户被删除，其所有资源和数据将被永久删除。在删除您的账户之前，请下载您希望保留的任何数据或信息。",
