--- a/lang/zh_TW.json
+++ b/lang/zh_TW.json
@@ -189,6 +189,7 @@
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "你確定嗎？這將從所有聯絡人中刪除模板，但不會刪除聯絡人本身。",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "您確定要刪除這個團隊嗎？一旦一個團隊被刪除，它的所有資源和資料將被永久刪除。",
   "Are you sure you want to delete your account? Once your account is deleted, all of its resources and data will be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "您確定要刪除您的帳號嗎？一旦您的帳號被刪除，其所有資源和資料將被永久刪除。請輸入您的密碼，確認您要永久刪除您的帳號。",
+  "Are you sure you want to disable two factor authentication?": "您確定要禁用兩個因素身份驗證嗎？",
   "Are you sure you would like to archive this contact?": "您確定要存檔此聯絡人嗎？",
   "Are you sure you would like to delete this API token?": "您確定要刪除這個 API token 嗎？",
   "Are you sure you would like to delete this contact? This will remove everything we know about this contact.": "您確定要刪除此聯絡人嗎？這將刪除我們所知道的有關此聯絡人的所有資訊。",
@@ -579,8 +580,8 @@
   "Log in": "登入",
   "Login": "登入",
   "Login with:": "登入方式：",
-  "Log Out": "登出",
   "Logout": "登出",
+  "Log Out": "登出",
   "Log Out Other Browser Sessions": "登出其它瀏覽器工作階段",
   "Longest streak": "最長連續紀錄",
   "Love": "愛",
@@ -670,6 +671,7 @@
   "of": "於",
   "Offered": "提供",
   "Once a team is deleted, all of its resources and data will be permanently deleted. Before deleting this team, please download any data or information regarding this team that you wish to retain.": "一旦團隊被刪除，其所有資源和資料將被永久刪除。在刪除該團隊之前，請下載您希望保留的有關該團隊的任何資料或資訊。",
+  "Once two factor authentication is disabled, you will no longer be prompted for a secure, random token during authentication.": "一旦禁用了兩個因素身份驗證，您將不再提示您在身份驗證期間進行安全的隨機令牌。",
   "Once you cancel,": "一旦取消，",
   "Once you click the Setup button below, you’ll have to open Telegram with the button we’ll provide you with. This will locate the Monica Telegram bot for you.": "點擊下面的「設定」按鈕後，您必須使用我們為您提供的按鈕開啟 Telegram。這將為您找到 Monica Telegram 機器人。",
   "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "一旦您的帳號被刪除，其所有資源和資料將被永久刪除。在刪除您的帳號之前，請下載您希望保留的任何資料或資訊。",
