--- a/lang/de.json
+++ b/lang/de.json
@@ -189,6 +189,7 @@
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "Bist du sicher? Dadurch wird die Vorlage aus allen Kontakten entfernt, die Kontakte selbst werden jedoch nicht gelöscht.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "Möchten Sie dieses Team wirklich löschen? Sobald ein Team gelöscht wird, werden alle Ressourcen und Daten dauerhaft gelöscht.",
   "Are you sure you want to delete your account? Once your account is deleted, all of its resources and data will be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "Möchten Sie Ihr Konto wirklich löschen? Sobald Ihr Konto gelöscht wurde, werden alle Ressourcen und Daten dauerhaft gelöscht. Bitte geben Sie Ihr Passwort ein, um zu bestätigen, dass Sie Ihr Konto dauerhaft löschen möchten.",
+  "Are you sure you want to disable two factor authentication?": "Sind Sie sicher, dass Sie zwei Faktorauthentifizierung deaktivieren möchten?",
   "Are you sure you would like to archive this contact?": "Sind Sie sicher, dass Sie diesen Kontakt archivieren möchten?",
   "Are you sure you would like to delete this API token?": "Möchten Sie dieses API-Token wirklich löschen?",
   "Are you sure you would like to delete this contact? This will remove everything we know about this contact.": "Sind Sie sicher, dass Sie diesen Kontakt löschen möchten? Dadurch wird alles gelöscht, was wir über diesen Kontakt wissen.",
@@ -579,8 +580,8 @@
   "Log in": "Einloggen",
   "Login": "Anmelden",
   "Login with:": "Einloggen mit:",
-  "Log Out": "Abmelden",
   "Logout": "Abmelden",
+  "Log Out": "Abmelden",
   "Log Out Other Browser Sessions": "Andere Browser-Sitzungen abmelden",
   "Longest streak": "Längste Strähne",
   "Love": "Liebe",
@@ -670,6 +671,7 @@
   "of": "von",
   "Offered": "Angeboten",
   "Once a team is deleted, all of its resources and data will be permanently deleted. Before deleting this team, please download any data or information regarding this team that you wish to retain.": "Sobald ein Team gelöscht wird, werden alle Ressourcen und Daten dauerhaft gelöscht. Laden Sie vor dem Löschen dieses Teams alle Daten oder Informationen zu diesem Team herunter, die Sie behalten möchten.",
+  "Once two factor authentication is disabled, you will no longer be prompted for a secure, random token during authentication.": "Sobald die Authentifizierung von zwei Faktoren deaktiviert ist, werden Sie während der Authentifizierung nicht mehr für ein sicheres, zufälliges Token aufgefordert.",
   "Once you cancel,": "Sobald Sie kündigen,",
   "Once you click the Setup button below, you’ll have to open Telegram with the button we’ll provide you with. This will locate the Monica Telegram bot for you.": "Sobald Sie unten auf die Schaltfläche „Einrichten“ klicken, müssen Sie Telegram mit der Schaltfläche öffnen, die wir Ihnen zur Verfügung stellen. Dadurch wird der Monica Telegram-Bot für Sie gefunden.",
   "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "Sobald Ihr Konto gelöscht wurde, werden alle Ressourcen und Daten dauerhaft gelöscht. Laden Sie vor dem Löschen Ihres Kontos alle Daten oder Informationen herunter, die Sie behalten möchten.",
