--- a/lang/el.json
+++ b/lang/el.json
@@ -189,6 +189,7 @@
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "Είσαι σίγουρος? Αυτό θα καταργήσει το πρότυπο από όλες τις επαφές, αλλά δεν θα διαγράψει τις ίδιες τις επαφές.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "Είστε βέβαιοι ότι θέλετε να διαγράψετε αυτήν την ομάδα; Μόλις διαγραφεί μια ομάδα, όλοι οι πόροι και τα δεδομένα της θα διαγραφούν οριστικά.",
   "Are you sure you want to delete your account? Once your account is deleted, all of its resources and data will be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "Είστε βέβαιοι ότι θέλετε να διαγράψετε το λογαριασμό σας; Μόλις διαγραφεί ο λογαριασμός σας, όλοι οι πόροι και τα δεδομένα του θα διαγραφούν οριστικά. Παρακαλώ εισάγετε τον κωδικό πρόσβασής σας για να επιβεβαιώσετε ότι θέλετε να διαγράψετε οριστικά το λογαριασμό σας.",
+  "Are you sure you want to disable two factor authentication?": "Είστε βέβαιοι ότι θέλετε να απενεργοποιήσετε τον έλεγχο ταυτότητας δύο παράγοντα;",
   "Are you sure you would like to archive this contact?": "Είστε βέβαιοι ότι θέλετε να αρχειοθετήσετε αυτήν την επαφή;",
   "Are you sure you would like to delete this API token?": "Είστε βέβαιοι ότι θα θέλατε να διαγράψετε αυτό το διακριτικό API;",
   "Are you sure you would like to delete this contact? This will remove everything we know about this contact.": "Είστε βέβαιοι ότι θέλετε να διαγράψετε αυτήν την επαφή; Αυτό θα καταργήσει όλα όσα γνωρίζουμε για αυτήν την επαφή.",
@@ -579,8 +580,8 @@
   "Log in": "Συνδεθείτε",
   "Login": "Είσοδος",
   "Login with:": "Συνδέσου με:",
-  "Log Out": "αποσυνδεθείτε",
   "Logout": "Έξοδος",
+  "Log Out": "αποσυνδεθείτε",
   "Log Out Other Browser Sessions": "Αποσυνδεθείτε Από Άλλες Συνεδρίες Του Προγράμματος Περιήγησης",
   "Longest streak": "Το μεγαλύτερο σερί",
   "Love": "Αγάπη",
@@ -670,6 +671,7 @@
   "of": "του",
   "Offered": "Προσφέρεται",
   "Once a team is deleted, all of its resources and data will be permanently deleted. Before deleting this team, please download any data or information regarding this team that you wish to retain.": "Μόλις διαγραφεί μια ομάδα, όλοι οι πόροι και τα δεδομένα της θα διαγραφούν οριστικά. Πριν διαγράψετε αυτήν την ομάδα, Κατεβάστε οποιαδήποτε δεδομένα ή πληροφορίες σχετικά με αυτήν την ομάδα που επιθυμείτε να διατηρήσετε.",
+  "Once two factor authentication is disabled, you will no longer be prompted for a secure, random token during authentication.": "Μόλις ο έλεγχος ταυτότητας δύο συντελεστών είναι απενεργοποιημένος, δεν θα σας ζητηθεί πλέον ένα ασφαλές, τυχαίο διακριτικό κατά τη διάρκεια της ταυτότητας.",
   "Once you cancel,": "Μόλις ακυρώσετε,",
   "Once you click the Setup button below, you’ll have to open Telegram with the button we’ll provide you with. This will locate the Monica Telegram bot for you.": "Μόλις κάνετε κλικ στο κουμπί Ρύθμιση παρακάτω, θα πρέπει να ανοίξετε το Telegram με το κουμπί που θα σας παρέχουμε. Αυτό θα εντοπίσει το ρομπότ Monica Telegram για εσάς.",
   "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "Μόλις διαγραφεί ο λογαριασμός σας, όλοι οι πόροι και τα δεδομένα του θα διαγραφούν οριστικά. Πριν από τη διαγραφή του λογαριασμού σας, παρακαλούμε να κατεβάσετε οποιαδήποτε δεδομένα ή πληροφορίες που θέλετε να διατηρήσετε.",
