--- a/lang/it.json
+++ b/lang/it.json
@@ -189,6 +189,7 @@
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "Sei sicuro? Ciò rimuoverà il modello da tutti i contatti, ma non eliminerà i contatti stessi.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "Vuoi davvero eliminare questo Team? Una volta eliminato, tutte le sue risorse e i relativi dati verranno eliminati definitivamente.",
   "Are you sure you want to delete your account? Once your account is deleted, all of its resources and data will be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "Vuoi davvero eliminare l’account? Una volta eliminato, tutte le sue risorse ed i relativi dati verranno eliminati definitivamente. Inserisci la password per confermare che desideri eliminare definitivamente il tuo account.",
+  "Are you sure you want to disable two factor authentication?": "Sei sicuro di voler disabilitare l’autenticazione a due fattori?",
   "Are you sure you would like to archive this contact?": "Sei sicuro di voler archiviare questo contatto?",
   "Are you sure you would like to delete this API token?": "Vuoi davvero eliminare questo Token API?",
   "Are you sure you would like to delete this contact? This will remove everything we know about this contact.": "Sei sicuro di voler eliminare questo contatto? Ciò rimuoverà tutto ciò che sappiamo su questo contatto.",
@@ -579,8 +580,8 @@
   "Log in": "Accedi",
   "Login": "Accedi",
   "Login with:": "Entra con:",
-  "Log Out": "Esci",
   "Logout": "Esci",
+  "Log Out": "Esci",
   "Log Out Other Browser Sessions": "Esci da altre sessioni del Browser",
   "Longest streak": "Serie più lunga",
   "Love": "Amore",
@@ -670,6 +671,7 @@
   "of": "di",
   "Offered": "Offerto",
   "Once a team is deleted, all of its resources and data will be permanently deleted. Before deleting this team, please download any data or information regarding this team that you wish to retain.": "Una volta eliminato un team, tutte le sue risorse e i relativi dati verranno eliminati definitivamente. Prima di eliminare questo team, scarica tutti i dati o le relative informazioni che desideri conservare.",
+  "Once two factor authentication is disabled, you will no longer be prompted for a secure, random token during authentication.": "Una volta che l’autenticazione a due fattori è disabilitata, non ti verrà più richiesto un token casuale sicuro durante l’autenticazione.",
   "Once you cancel,": "Una volta annullato,",
   "Once you click the Setup button below, you’ll have to open Telegram with the button we’ll provide you with. This will locate the Monica Telegram bot for you.": "Dopo aver fatto clic sul pulsante Configurazione in basso, dovrai aprire Telegram con il pulsante che ti forniremo. Questo individuerà il bot Monica Telegram per te.",
   "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "Una volta eliminato il tuo account, tutte le sue risorse e i relativi dati verranno eliminati definitivamente. Prima di eliminarlo, scarica tutti i dati o le informazioni che desideri conservare.",
