--- a/lang/pa.json
+++ b/lang/pa.json
@@ -189,6 +189,7 @@
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "ਤੁਹਾਨੂੰ ਪੂਰਾ ਵਿਸ਼ਵਾਸ ਹੈ? ਇਹ ਸਾਰੇ ਸੰਪਰਕਾਂ ਤੋਂ ਟੈਮਪਲੇਟ ਨੂੰ ਹਟਾ ਦੇਵੇਗਾ, ਪਰ ਸੰਪਰਕਾਂ ਨੂੰ ਆਪਣੇ ਆਪ ਨਹੀਂ ਮਿਟਾਏਗਾ।",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "ਕੀ ਤੁਸੀਂ ਯਕੀਨੀ ਤੌਰ ’ਤੇ ਇਸ ਟੀਮ ਨੂੰ ਮਿਟਾਉਣਾ ਚਾਹੁੰਦੇ ਹੋ? ਇੱਕ ਵਾਰ ਟੀਮ ਨੂੰ ਮਿਟਾਉਣ ਤੋਂ ਬਾਅਦ, ਇਸਦੇ ਸਾਰੇ ਸਰੋਤ ਅਤੇ ਡੇਟਾ ਸਥਾਈ ਤੌਰ ’ਤੇ ਮਿਟਾ ਦਿੱਤੇ ਜਾਣਗੇ।",
   "Are you sure you want to delete your account? Once your account is deleted, all of its resources and data will be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "ਕੀ ਤੁਸੀਂ ਯਕੀਨੀ ਤੌਰ ’ਤੇ ਆਪਣਾ ਖਾਤਾ ਮਿਟਾਉਣਾ ਚਾਹੁੰਦੇ ਹੋ? ਇੱਕ ਵਾਰ ਜਦੋਂ ਤੁਹਾਡਾ ਖਾਤਾ ਮਿਟਾਇਆ ਜਾਂਦਾ ਹੈ, ਤਾਂ ਇਸਦੇ ਸਾਰੇ ਸਰੋਤ ਅਤੇ ਡੇਟਾ ਸਥਾਈ ਤੌਰ ’ਤੇ ਮਿਟਾ ਦਿੱਤੇ ਜਾਣਗੇ। ਕਿਰਪਾ ਕਰਕੇ ਇਹ ਪੁਸ਼ਟੀ ਕਰਨ ਲਈ ਆਪਣਾ ਪਾਸਵਰਡ ਦਰਜ ਕਰੋ ਕਿ ਤੁਸੀਂ ਆਪਣੇ ਖਾਤੇ ਨੂੰ ਪੱਕੇ ਤੌਰ ’ਤੇ ਮਿਟਾਉਣਾ ਚਾਹੁੰਦੇ ਹੋ।",
+  "Are you sure you want to disable two factor authentication?": "ਕੀ ਤੁਸੀਂ ਯਕੀਨਨ ਦੋ ਕਾਰਕ ਪ੍ਰਮਾਣਿਕਤਾ ਨੂੰ ਅਯੋਗ ਕਰਨਾ ਚਾਹੁੰਦੇ ਹੋ?",
   "Are you sure you would like to archive this contact?": "ਕੀ ਤੁਸੀਂ ਯਕੀਨਨ ਇਸ ਸੰਪਰਕ ਨੂੰ ਆਰਕਾਈਵ ਕਰਨਾ ਚਾਹੁੰਦੇ ਹੋ?",
   "Are you sure you would like to delete this API token?": "ਕੀ ਤੁਸੀਂ ਯਕੀਨੀ ਤੌਰ ’ਤੇ ਇਸ API ਟੋਕਨ ਨੂੰ ਮਿਟਾਉਣਾ ਚਾਹੁੰਦੇ ਹੋ?",
   "Are you sure you would like to delete this contact? This will remove everything we know about this contact.": "ਕੀ ਤੁਸੀਂ ਯਕੀਨਨ ਇਸ ਸੰਪਰਕ ਨੂੰ ਮਿਟਾਉਣਾ ਚਾਹੁੰਦੇ ਹੋ? ਇਸ ਨਾਲ ਸਾਨੂੰ ਇਸ ਸੰਪਰਕ ਬਾਰੇ ਪਤਾ ਲੱਗਣ ਵਾਲੀ ਹਰ ਚੀਜ਼ ਨੂੰ ਹਟਾ ਦਿੱਤਾ ਜਾਵੇਗਾ।",
@@ -580,8 +581,8 @@
   "Log in": "ਲਾਗਿਨ",
   "Login": "ਲਾਗਿਨ",
   "Login with:": "ਇਸ ਨਾਲ ਲੌਗਇਨ ਕਰੋ:",
-  "Log Out": "ਲਾੱਗ ਆਊਟ, ਬਾਹਰ ਆਉਣਾ",
   "Logout": "ਲਾੱਗ ਆਊਟ, ਬਾਹਰ ਆਉਣਾ",
+  "Log Out": "ਲਾੱਗ ਆਊਟ, ਬਾਹਰ ਆਉਣਾ",
   "Log Out Other Browser Sessions": "ਹੋਰ ਬਰਾਊਜ਼ਰ ਸੈਸ਼ਨ ਲੌਗ ਆਉਟ ਕਰੋ",
   "Longest streak": "ਸਭ ਤੋਂ ਲੰਬੀ ਲਕੀਰ",
   "Love": "ਪਿਆਰ",
@@ -671,6 +672,7 @@
   "of": "ਦੇ",
   "Offered": "ਦੀ ਪੇਸ਼ਕਸ਼ ਕੀਤੀ",
   "Once a team is deleted, all of its resources and data will be permanently deleted. Before deleting this team, please download any data or information regarding this team that you wish to retain.": "ਇੱਕ ਵਾਰ ਟੀਮ ਨੂੰ ਮਿਟਾਉਣ ਤੋਂ ਬਾਅਦ, ਇਸਦੇ ਸਾਰੇ ਸਰੋਤ ਅਤੇ ਡੇਟਾ ਸਥਾਈ ਤੌਰ ’ਤੇ ਮਿਟਾ ਦਿੱਤੇ ਜਾਣਗੇ। ਇਸ ਟੀਮ ਨੂੰ ਮਿਟਾਉਣ ਤੋਂ ਪਹਿਲਾਂ, ਕਿਰਪਾ ਕਰਕੇ ਇਸ ਟੀਮ ਬਾਰੇ ਕੋਈ ਵੀ ਡੇਟਾ ਜਾਂ ਜਾਣਕਾਰੀ ਡਾਊਨਲੋਡ ਕਰੋ ਜਿਸ ਨੂੰ ਤੁਸੀਂ ਬਰਕਰਾਰ ਰੱਖਣਾ ਚਾਹੁੰਦੇ ਹੋ।",
+  "Once two factor authentication is disabled, you will no longer be prompted for a secure, random token during authentication.": "ਇੱਕ ਵਾਰ ਦੋ ਫੈਕਟਰ ਪ੍ਰਮਾਣਿਕਤਾ ਅਯੋਗ ਹੋ ਜਾਂਦੀ ਹੈ, ਪ੍ਰਮਾਣਿਕਤਾ ਦੇ ਦੌਰਾਨ ਬੇਤਰਤੀਬੇ ਟੋਕਨ ਲਈ ਤੁਹਾਨੂੰ ਹੁਣ ਕਿਸੇ ਸੁਰੱਖਿਅਤ ਟੋਕਨ ਲਈ ਨਹੀਂ ਪੁੱਛੇਗੀ.",
   "Once you cancel,": "ਇੱਕ ਵਾਰ ਜਦੋਂ ਤੁਸੀਂ ਰੱਦ ਕਰ ਦਿੰਦੇ ਹੋ,",
   "Once you click the Setup button below, you’ll have to open Telegram with the button we’ll provide you with. This will locate the Monica Telegram bot for you.": "ਇੱਕ ਵਾਰ ਜਦੋਂ ਤੁਸੀਂ ਹੇਠਾਂ ਦਿੱਤੇ ਸੈੱਟਅੱਪ ਬਟਨ ’ਤੇ ਕਲਿੱਕ ਕਰਦੇ ਹੋ, ਤਾਂ ਤੁਹਾਨੂੰ ਉਸ ਬਟਨ ਨਾਲ ਟੈਲੀਗ੍ਰਾਮ ਖੋਲ੍ਹਣਾ ਪਵੇਗਾ ਜੋ ਅਸੀਂ ਤੁਹਾਨੂੰ ਮੁਹੱਈਆ ਕਰਾਂਗੇ। ਇਹ ਤੁਹਾਡੇ ਲਈ Monica ਟੈਲੀਗ੍ਰਾਮ ਬੋਟ ਨੂੰ ਲੱਭੇਗਾ।",
   "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "ਇੱਕ ਵਾਰ ਜਦੋਂ ਤੁਹਾਡਾ ਖਾਤਾ ਮਿਟਾਇਆ ਜਾਂਦਾ ਹੈ, ਤਾਂ ਇਸਦੇ ਸਾਰੇ ਸਰੋਤ ਅਤੇ ਡੇਟਾ ਸਥਾਈ ਤੌਰ ’ਤੇ ਮਿਟਾ ਦਿੱਤੇ ਜਾਣਗੇ। ਆਪਣੇ ਖਾਤੇ ਨੂੰ ਮਿਟਾਉਣ ਤੋਂ ਪਹਿਲਾਂ, ਕਿਰਪਾ ਕਰਕੇ ਕੋਈ ਵੀ ਡਾਟਾ ਜਾਂ ਜਾਣਕਾਰੀ ਡਾਊਨਲੋਡ ਕਰੋ ਜਿਸ ਨੂੰ ਤੁਸੀਂ ਬਰਕਰਾਰ ਰੱਖਣਾ ਚਾਹੁੰਦੇ ਹੋ।",
