--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -189,6 +189,7 @@
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "Tem certeza? Isso removerá o modelo de todos os contatos, mas não excluirá os contatos em si.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "Tem certeza que quer excluir este time? Uma vez excluído, todos os dados e recursos relativos a ela serão excluídos permanentemente.",
   "Are you sure you want to delete your account? Once your account is deleted, all of its resources and data will be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "Tem certeza que quer excluir a sua conta? Uma vez excluída, todos os dados e recursos relativos a ela serão permanentemente excluídos. Por favor informe a sua senha para confirmar que você deseja excluir permanentemente a sua conta.",
+  "Are you sure you want to disable two factor authentication?": "Tem certeza de que deseja desativar a autenticação de dois fatores?",
   "Are you sure you would like to archive this contact?": "Tem certeza de que deseja arquivar este contato?",
   "Are you sure you would like to delete this API token?": "Tem certeza de que deseja excluir este token da API?",
   "Are you sure you would like to delete this contact? This will remove everything we know about this contact.": "Tem certeza de que deseja excluir este contato? Isso removerá tudo o que sabemos sobre esse contato.",
@@ -579,8 +580,8 @@
   "Log in": "Entrar",
   "Login": "Entrar",
   "Login with:": "Faça login com:",
-  "Log Out": "Sair",
   "Logout": "Sair",
+  "Log Out": "Sair",
   "Log Out Other Browser Sessions": "Desligar Outras Sessões do Navegador",
   "Longest streak": "Sequência mais longa",
   "Love": "Amor",
@@ -670,6 +671,7 @@
   "of": "de",
   "Offered": "Oferecido",
   "Once a team is deleted, all of its resources and data will be permanently deleted. Before deleting this team, please download any data or information regarding this team that you wish to retain.": "Uma vez excluído, o time e todos os seus dados e recursos serão excluídos permanentemente. Antes de excluir este time, faça download de todos os dados e informações sobre este time que você deseje manter.",
+  "Once two factor authentication is disabled, you will no longer be prompted for a secure, random token during authentication.": "Depois que a autenticação de dois fatores estiver desativada, você não será mais solicitado para um token aleatório seguro durante a autenticação.",
   "Once you cancel,": "Depois de cancelar,",
   "Once you click the Setup button below, you’ll have to open Telegram with the button we’ll provide you with. This will locate the Monica Telegram bot for you.": "Depois de clicar no botão Configurar abaixo, você terá que abrir o Telegram com o botão que forneceremos. Isso localizará o bot Monica Telegram para você.",
   "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "Uma vez que sua conta é excluída, todos os dados e recursos desta conta serão excluídos permanentemente. Antes de excluir a sua conta, faça download de todos os dados e informações que você deseje manter.",
