--- a/lang/vi.json
+++ b/lang/vi.json
@@ -189,6 +189,7 @@
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "Bạn có chắc không? Thao tác này sẽ xóa mẫu khỏi tất cả địa chỉ liên hệ nhưng sẽ không xóa chính địa chỉ liên hệ đó.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "Bạn có chắc chắn muốn xóa nhóm này không? Khi một nhóm bị xóa, tất cả tài nguyên và dữ liệu của nhóm đó sẽ bị xóa vĩnh viễn.",
   "Are you sure you want to delete your account? Once your account is deleted, all of its resources and data will be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "Bạn có chắc rằng bạn muốn xóa tài khoản của bạn? Khi tài khoản của bạn bị xóa, tất cả tài nguyên và dữ liệu của tài khoản đó sẽ bị xóa vĩnh viễn. Vui lòng nhập mật khẩu của bạn để xác nhận rằng bạn muốn xóa vĩnh viễn tài khoản của mình.",
+  "Are you sure you want to disable two factor authentication?": "Bạn có chắc là bạn muốn vô hiệu hóa xác thực hai yếu tố?",
   "Are you sure you would like to archive this contact?": "Bạn có chắc chắn muốn lưu trữ địa chỉ liên hệ này không?",
   "Are you sure you would like to delete this API token?": "Bạn có chắc chắn muốn xóa API token này không?",
   "Are you sure you would like to delete this contact? This will remove everything we know about this contact.": "Bạn có chắc chắn muốn xóa địa chỉ liên hệ này không? Điều này sẽ xóa mọi thứ chúng tôi biết về liên hệ này.",
@@ -579,8 +580,8 @@
   "Log in": "Đăng nhập",
   "Login": "Đăng nhập",
   "Login with:": "Đăng nhập với:",
-  "Log Out": "Đăng Xuất",
   "Logout": "Đăng xuất",
+  "Log Out": "Đăng Xuất",
   "Log Out Other Browser Sessions": "Đăng Xuất Khỏi Các Phiên Trình Duyệt Khác",
   "Longest streak": "Chuỗi dài nhất",
   "Love": "Yêu",
@@ -670,6 +671,7 @@
   "of": "trong",
   "Offered": "Ngỏ ý",
   "Once a team is deleted, all of its resources and data will be permanently deleted. Before deleting this team, please download any data or information regarding this team that you wish to retain.": "Khi một nhóm bị xóa, tất cả tài nguyên và dữ liệu của nhóm đó sẽ bị xóa vĩnh viễn. Trước khi xóa nhóm này, vui lòng tải xuống bất kì dữ liệu hoặc thông tin nào liên quan đến nhóm này mà bạn muốn giữ lại.",
+  "Once two factor authentication is disabled, you will no longer be prompted for a secure, random token during authentication.": "Sau khi xác thực hai yếu tố bị vô hiệu hóa, bạn sẽ không còn được nhắc về mã thông báo ngẫu nhiên, an toàn trong quá trình xác thực.",
   "Once you cancel,": "Sau khi bạn hủy,",
   "Once you click the Setup button below, you’ll have to open Telegram with the button we’ll provide you with. This will locate the Monica Telegram bot for you.": "Sau khi nhấp vào nút Thiết lập bên dưới, bạn sẽ phải mở Telegram bằng nút chúng tôi sẽ cung cấp cho bạn. Điều này sẽ xác định vị trí bot Monica Telegram cho bạn.",
   "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "Khi tài khoản của bạn bị xóa, tất cả tài nguyên và dữ liệu của tài khoản đó sẽ bị xóa vĩnh viễn. Trước khi xóa tài khoản của bạn, vui lòng tải xuống bất kì dữ liệu hoặc thông tin nào bạn muốn giữ lại.",
